add /prices/renew
