# app/Http/Controllers/PriceController.php
@@ -6,7 +6,9 @@ use App\Dtos\PriceDto;
 use App\Http\Requests\StorePriceRequest;
 use App\Http\Resources\PriceResource;
 use App\Models\Price;
+use App\Services\Currency\CurrencyApi;
 use App\UseCases\Price\CreatePriceWithCurrencyApiIntegration;
+use Illuminate\Http\Resources\Json\AnonymousResourceCollection;
 
 class PriceController extends Controller
 {
@@ -19,14 +21,39 @@ class PriceController extends Controller
     public function store(
         StorePriceRequest $request,
         CreatePriceWithCurrencyApiIntegration $createPriceWithCurrencyApiIntegration
-    ) {
+    )
+    {
         try {
             $fields = json_decode($request->getContent());
-            $dto = new PriceDto($fields);
-            $price = $createPriceWithCurrencyApiIntegration->execute($dto);
+            $price = $createPriceWithCurrencyApiIntegration->setData(new PriceDto($fields))->execute();
             return new PriceResource($price);
+        } catch (\DomainException $e) {
+            return response()->json($e->getMessage(), $e->getCode());
         } catch (\Exception $e) {
-            response()->json('error', 500);
+            return response()->json('Server Error', 500);
         }
+    }
+
+    public function renew(CurrencyApi $currencyApi)
+    {
+        $prices = Price::all(['id', 'currency_code']);
+
+        try {
+            $prices->filter(function ($price) use ($currencyApi){
+                $currencyApi->setCurrencyCode($price->currency_code);
+
+                /** Executa a busca do valor de referência para conversão dos preços para a região informada. */
+                $currencyApi->execute();
+                /** @var Price $price */
+                $price->update(['value' => $currencyApi->getReferenceValue()]);
+            });
+        } catch (\DomainException $e) {
+            return response()->json($e->getMessage(), $e->getCode());
+        } catch (\Exception $e) {
+            return response()->json('Server Error', 500);
+        }
+
+        $priceCollection = Price::all(['currency_code', 'value', 'territory', 'created_at', 'updated_at']);
+        return PriceResource::collection($priceCollection);
     }
 }
